2008-05-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_video_caps),
	(gst_riff_create_video_template_caps):
	Add support for DVCPRO.

2008-05-26  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/videoscale/gstvideoscale.c: (DEFAULT_PROP_METHOD):
	  Change default scaling method from nearest-neighbour to bilinear.

2008-05-26  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* tests/check/libs/video.c:
	  More checks.

2008-05-25  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/subparse/gstsubparse.c: (parser_state_init),
	  (gst_sub_parse_format_autodetect), (handle_buffer):
	* gst/subparse/gstsubparse.h:
	* tests/check/elements/subparse.c: (test_tmplayer_style3b):
	  Limit duration to a maximum of five seconds for tmplayer format where
	  we can guess the duration only from the timestamp of the next line of
	  text. We don't want to show a text for eternities just because nothing
	  else is being said for a while.

2008-05-23  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_chain),
	(gst_base_rtp_depayload_handle_sink_event),
	(gst_base_rtp_depayload_push_full),
	(gst_base_rtp_depayload_change_state):
	Check sequence numbers, mark input buffers with a discont flag for the
	subclass when we detected a gap, drop duplicate buffers. We do this
	because one can use the element without a jitterbuffer in front and we
	don't want to feed the subclasses invalid or reordered data.
	Do an error when the subclass did not provide a process function instead
	of crashing.
	Some other small cleanups.

2008-05-22  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/videotestsrc/videotestsrc.c: (paint_hline_NV12_NV21):
	  May just as well use the precalculated uvstride here.

2008-05-22  Jan Schmidt  <jan.schmidt@sun.com>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-base-plugins-overrides.txt: